Add html and css

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+header {
+	background-color: #454545;
+	color: #F9F6EE;
+)
+
 h1 {
-    color: purple;
+	color: purple;
 }
+
+body {
+	background-color: #E4E0D8;
+)
