--- a/css/style.css
+++ b/css/style.css
@@ -82,10 +82,39 @@ Section 1
 
 h2 {
 	color: #1C1C1C;
-	font-size: 24px;
 	text-align: center;
+	font-size: 24px;
 	font-weight: bold;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
 	font-family: Rozha+One&display, serif;
+}
+
+.hero {
+	padding-left: 15.25em;
+}
+
+/*===================================
+Footer
+===================================*/
+footer {
+	background-color: #454545;
+}
+
+
+footer li {
+	margin-right: 3rem;
+	padding-bottom: 3rem;
+	display: inline-block;
+	color: #F9F6EE;
+	padding-top: 3rem;
+}
+
+footer p {
+	display: block;
+	margin-right: 3rem;
+	padding-bottom: 3rem;
+	display: inline-block;
+	color: #F9F6EE;
+	padding-top: 3rem;
 }
