--- a/css/style.css
+++ b/css/style.css
@@ -25,11 +25,13 @@ a:hover {
 	border: 1px solid #000000;
 }
 
-/*a:visited {
+/*
+a:visited {
     color: inherit;
     font-weight: bold;
     text-decoration: none;
-}*/
+}
+*/
 
 a:active {
 	color: #B7C18F;
@@ -104,9 +106,11 @@ h1 {
 Section 1
 ===================================*/
 
-/*.hero {
+/*
+.hero {
 	padding-left: 15.25em;
-}*/
+}
+*/
 
 .hero {
 	width: 100%;
@@ -131,7 +135,7 @@ h2 {
 }
 
 /*====================================
-Body
+Features
 ====================================*/
 
 .features {
@@ -168,30 +172,61 @@ Body
 	display: flex;
 	justify-content: center;
 	align-items: center;
-}*/
+}
+*/
 
+/*====================================
+Community
+====================================*/
+
+.community {
+	display: flex;
+	column-gap: 1rem;
+}
+
+.community img {
+	display: block;
+}
+
+.community img,
+.community p {
+	margin: auto;
+	max-width: 40%;
+
+/*
 .community {
 	display: inline-grid;
 	width: 100%;
-	grid-area: 1 / 2 / span 1 / span 2;
+	grid-area: 1 / 2 / span 1 / span ;
 	justify-items: center;
 	grid-column-gap: 10px;
 	grid-template-columns: 30%, 1f;
 	grid-row: 1 / span 1;
+	padding-top: 1rem;
+	padding-left: 5.75rem;
+	padding-right: 5.75rem;
+	padding-bottom: 1rem; 
 }
-
 
 .community img {
 	grid-column-start: 1;
 	grid-column-end: span 1;
-	padding-left: 30%;
-	/*padding-right: 30%;*/
+	align-self: center;
+	display: block;
+	max-width: 100%;
+	max-heigh: 100%
+	
+padding-left: 30%;
+padding-right: 30%;
 }
+*/
 
 .community p {
 	grid-column-start: 2;
 	grid-column-end: span 1;
 	width: 60%;
+	height: 400px;
+	aligh-self: center;
 }
 
 /*
@@ -206,7 +241,6 @@ Body
 	margin-right: 6.25%;
 
 }
-
 */
 
 /*===================================
