--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,7 @@ h1 a {
 }
 
 /*===================================
-Section 1
+CTA
 ===================================*/
 
 .hero {
@@ -127,10 +127,11 @@ h2 {
 	font-weight: bold;
 	padding-top: 1rem;
 	padding-bottom: 1rem;
-	font-family: Rozha+One&display, serif;
+	font-family: sans-serif;
 	border: 1px solid #000000;
 	margin: 1rem 1rem;
 }
+
 
 /*====================================
 Features
@@ -144,12 +145,17 @@ Features
 
 .feature img {
 	display: block;
+	width: 40%;
+	height: 80%;
+	overflow: hidden;
 
 }
 
 .feature p {
 	padding-top: 1rem;
 	padding-bottom: 1rem;
+	height: 20%;
+	font-family: sans-serif;
 }
 
 .feature img,
@@ -184,13 +190,13 @@ Community
 }
 
 .community p {
+	font-family: sans-serif;
 	grid-column-start: 2;
 	grid-column-end: span 1;
 	width: 40%;
 	overflow: hidden;
 	text-align: center;
 	padding-top: 10%;
-
 
 }
 
