--- a/css/style.css
+++ b/css/style.css
@@ -241,42 +241,42 @@ Community
 
 #community {
 	display: flex-grid;
-	grid-template-columns: repeat (1 2fr);
-	grid-auto-rows: 2rem;
 	margin-top: 4.5rem;
 	margin-bottom: 1rem;
-	margin-right: 3rem;
-	margin-left: 5.2rem;
 	align-items: center;
 	align-content: center;
 }
 
-#community .community-sign-up {
-	display: inline-block;
+#community .community-container {
+	display: flex;
+	flex-direction: rows;
+	justify-content: center;
+	margin-top: 2rem;
 }
 
+#community .community-container p {
+	border: 1px solid #000000;
+	width: 40%;
+	height: auto;
+	font-size: 0.75rem;
+	text-align: center;
+	font-family: sans-serif;
+	align-content: center;
+	margin-right: 5rem;
+}
+
+
 #community img {
-	width: 20rem;
-	height: 13rem;
+	margin-left: 5rem;
+	width: 60%;
+	margin-right: .75rem;
+	/*
+	height: auuto;
+*/
 	overflow: hidden;
 	object-fit: cover;
 }
 
-/*
-#community .community-info {
-	margin-top: 1.75rem;
-}*/
-
-#community p {
-	display: inline-block;
-	grid-column: 2;
-	font-family: sans-serif;
-	width: 41.2%;
-	overflow: hidden;
-	text-align: center;
-	height: 7.2rem;
-	padding-top: 10%;
-}
 
 /*===================================
 Footer
