Fix cta padding

--- a/css/style.css
+++ b/css/style.css
@@ -193,7 +193,7 @@ CTA
 	position: relative;
 	background-color: hsla(44, 48%, 95%, 85%);
 	top: 4rem;
-	padding: .75Srem .4rem 1rem .4rem;
+	padding: .75rem .4rem 1rem .4rem;
 	max-width: 35%;
 	max-height: auto%;
 	margin-bottom: 4rem;
